[project]
name = "sysco"
version = "0.1.0"
description = "Library for system and controls tools"
readme = "README.md"
authors = [{ name = "Silvan Stadelmann", email = "silvasta3@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.6.5",
    "numpy>=2.2.6",
]

[project.scripts]
sysco = "sysco:main"

[tool.maturin]
module-name = "sysco._core"
python-packages = ["sysco"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
