[project]
name = "sysco"
version = "0.1.1a1"
classifiers = ["Development Status :: 3 - Alpha"]
description = "Library for system and control tools"
license = { text = "Apache License 2.0" }
readme = "README.md"
authors = [{ name = "Silvan Stadelmann", email = "silvasta3@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["cvxpy>=1.6.5", "loguru>=0.7.3", "numpy>=2.2.6"]

[tool.maturin]
module-name = "sysco._core"
python-packages = ["sysco"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
